--- a/vue-project-1/package.json
+++ b/vue-project-1/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "mint-ui": "^2.2.13",
     "style-loader": "^0.23.1",
     "vue": "^2.6.6",
     "vue-loader": "^15.6.2",
